--- a/index.html
+++ b/index.html
@@ -80,8 +80,117 @@
             
         </section>
         <!--end banner area-->
+        <!-- about us area -->
+        <section class="about">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6 col-md-12">
+                <div class="about-image">
+                  <img src="./img/about.jpeg" alt="about" class="img-fluid">
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12 about-title">
+                <h2 class="text-uppercase pt-5">
+                  <span>Let me</span>
+                  <span>Let me</span>
+                  <span>Let me</span>
+                </h2>
+                <div class="paragraph py-4 w-75">
+                  <p class="para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, optio! A velit, numquam excepturi reprehenderit fugit eius ipsam laudantium dignissimos.
+                  </p>
+                  <p class="para">
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here'
+                  </p>
+                </div>
+                <button type="button" class="btn button primary-button text-uppercase">Download CSV</button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End about us area -->
+
+        <!--brand area-->
+        <section class="brand-area">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xl-6 col-lg-12 col-md-12">
+                  <div class="first-row row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-1">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-2">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-3">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-4">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-5">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-6">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-7">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-8">
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                      <div class="single-brand">
+                        <img src="./img/logo.jpg" alt="brand-9">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-12 col-md-12">
+                  <div class="experience-area">
+                    <div class="d-flex flex-row years-area">
+                      <h2 class="p-3 years">10</h2>
+                      <h2>
+                        <span>Years</span>
+                        <span>Experience</span>
+                        <span>Working</span>
+                      </h2>
+                    </div>
+                    <div class="d-flex flex-row flex-wrap call-area">
+                      <span><i class="fas fa-phone-alt fa-3x px-3"></i></span>
+                      <div class="call-now">
+                        <a href="#" class="text-uppercase h4 font-roboto">Call now</a>
+                        <span class="font-roboto py-2">(+000)0000 0000</span>
+                      </div>
+                    </div>
+                    <div class="bg-panel"></div> <!--not using this-->
+                  </div>
+                </div>
+
+                
+              </div>
+            </div>
 
 
+        </section>
+        <!--end brand area-->
     </main>
 
     <!--End main area-->
